--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="lip">
         
             <header>
-                <a href="logo" class="logo" id="logo" ><img src="img/Логотип.png" alt="Логотип"></a>
+                <a href="#logo" class="logo" id="logo" ><img src="img/Логотип.png" alt="Логотип"></a>
                 <a href="#daob1"><p class="inf1">Обо мне</p></a>
                 <a href="#daob2"><p class="inf2">Работы</p></a>
                 <a href="#svyaz"><p class="inf3">Связь</p></a>
